Added navbar layout

--- a/styles/home.css
+++ b/styles/home.css
@@ -46,7 +46,7 @@
   position: relative;
 }
 
-.categories_img_title{
+.categories_img_title {
   font-size: 2.3rem;
   color: #000000;
 }
@@ -55,23 +55,23 @@
   margin: 0.625rem 0 0 1.563rem;
 }
 
-.info{
+.info {
   top: 50%;
   left: 50%;
   z-index: 1;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   position: absolute;
 }
 
-.info-bestselling{
+.info-bestselling {
   left: 40%;
 }
 
-.categories_navTab_container{
+.categories_navTab_container {
   margin: 3rem 1.5rem;
 }
 
-.categories_navTabs_list{
+.categories_navTabs_list {
   list-style-type: none;
   display: flex;
   justify-content: center;
@@ -79,39 +79,59 @@
   padding: 1.8rem 0;
 }
 
-.categories_navLink{
+.categories_navLink {
   text-decoration: none;
   color: #333333;
   font-weight: 500;
 }
 
-.categories_navLink1{
+.categories_navLink1 {
   margin-right: 2rem;
 }
 
-.categories_navLink2{
+.categories_navLink2 {
   margin: 0rem 2rem;
 }
 
-.card_container{
+.card_container {
   margin: 3rem 1.5rem;
   display: grid;
   gap: 2.5rem;
   row-gap: 7rem;
-  grid-template-areas: 
+  grid-template-areas:
     "one two three four"
-    "five six seven eight"; 
+    "five six seven eight";
 }
 
-.card_custom_width{
+.card_custom_width {
   width: 18rem;
 }
 
-.custom_btn{
+.custom_btn {
   background-color: #557669;
   width: 93%;
 }
 
-.pri_clr{
+.pri_clr {
   color: #556052;
+}
+
+.nav_searchBar {
+  outline: none;
+  width: 40rem;
+  padding: 0.5rem;
+  border: 1px solid var(--gray-shade5);
+}
+
+.searchBar_icon{
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  background-color: pink;
+}
+
+.width-auto{
+  width: auto;
 }
