--- a/styles/utility.css
+++ b/styles/utility.css
@@ -14,6 +14,10 @@
     margin-bottom: 0;
 }
 
+.mb-2{
+    margin-bottom: 2rem;
+}
+
 .mr-4{
     margin-right: 4rem;
 }
@@ -35,4 +39,8 @@
 
 .width-reset{
     width: 18%;
+}
+
+.d-flex{
+    display: flex;
 }
