--- a/styles/home.css
+++ b/styles/home.css
@@ -129,7 +129,8 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  background-color: pink;
+  background-color: var(--plant-pri-clr);
+  color: var(--custom-pri-clr);
 }
 
 .horizontal_rule_container {
