--- a/styles/productListing.css
+++ b/styles/productListing.css
@@ -7,33 +7,42 @@
   margin: 1rem 1.5rem;
 }
 
-.productlisting_main_content_container{
-    margin: 3rem 1.5rem;
+.productlisting_main_content_container {
+  margin: 3rem 1.5rem;
 }
 
-.productlisting_sidebar{
-    width: 25%;
+.productlisting_sidebar {
+  width: 25%;
+  padding: 1rem 2rem 1rem 1rem;
+  margin-right: 2rem;
 }
 
-.productlisting_products{
-    width: 75%;
+.productlisting_products {
+  width: 75%;
 }
 
-.products_filter_section{
-    display: flex;
-    margin-bottom: 1.2rem;
-    border-bottom: 1px solid var(--custom-pri-clr);
-    padding-bottom: 1.2rem;
-    align-items: center;
-    justify-content: space-between;
+.products_filter_section {
+  display: flex;
+  margin-bottom: 1.2rem;
+  border-bottom: 1px solid var(--custom-pri-clr);
+  padding-bottom: 1.2rem;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.products_sidebar_title{
-    margin-bottom: 1.2rem;
-    border-bottom: 1px solid var(--custom-pri-clr);
-    padding-bottom: 1.2rem;
+.products_sidebar_title {
+  margin-bottom: 1.2rem;
+  border-bottom: 1px solid var(--custom-pri-clr);
+  padding-bottom: 1.2rem;
 }
 
-.products_sidebar_inputbox{
-    margin: 1.2rem 0;
+.products_sidebar_inputbox {
+  margin: 1.2rem 0;
+}
+
+.custom_clear_btn {
+  background-color: var(--plant-pri-clr);
+  padding: 0.4rem 0.6rem;
+  font-size: 0.8rem;
+  outline: none;
 }
