Done with all products card

--- a/styles/productListing.css
+++ b/styles/productListing.css
@@ -46,3 +46,16 @@
   font-size: 0.8rem;
   outline: none;
 }
+
+.productlisting_products_container {
+    width: 75%;
+    margin: 3rem 1.5rem;
+    display: grid;
+    gap: 2.5rem;
+    row-gap: 7rem;
+    grid-template-areas:
+      "one two three"
+      "four five six" 
+      "seven eight nine";
+  
+}
