--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 :root {
     --plant-pri-clr: #557669;
+    --plant-pri-light-clr: #94B49F;
+
     --plant-sec-clr: #556052;
 
     --pink-clr: pink;
