--- a/styles/utility.css
+++ b/styles/utility.css
@@ -18,8 +18,16 @@
     margin-bottom: 2rem;
 }
 
+.mr-1{
+    margin-right: 1rem;
+}
+
 .mr-4{
     margin-right: 4rem;
+}
+
+.mt-2{
+    margin-top: 2rem;
 }
 
 .font-resize{
@@ -43,4 +51,8 @@
 
 .d-flex{
     display: flex;
+}
+
+.p-relative{
+    position: relative;
 }
