Done with product cards

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -2,57 +2,61 @@
   width: auto;
 }
 
-.ml-1{
-    margin-left: 1rem;
+.ml-1 {
+  margin-left: 1rem;
 }
 
-.ml-2{
-    margin-left: 2rem;
+.ml-2 {
+  margin-left: 2rem;
 }
 
-.mb-0{
-    margin-bottom: 0;
+.mb-0 {
+  margin-bottom: 0;
 }
 
-.mb-2{
-    margin-bottom: 2rem;
+.mb-2 {
+  margin-bottom: 2rem;
 }
 
-.mr-1{
-    margin-right: 1rem;
+.mr-1 {
+  margin-right: 1rem;
 }
 
-.mr-4{
-    margin-right: 4rem;
+.mr-4 {
+  margin-right: 4rem;
 }
 
-.mt-2{
-    margin-top: 2rem;
+.mt-2 {
+  margin-top: 2rem;
 }
 
-.font-resize{
-    font-size: 2.2rem;
+.font-resize {
+  font-size: 2.2rem;
 }
 
-.flex-col-center{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.flex-col-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.inherit-clr{
-    color: inherit;
+.inherit-clr {
+  color: inherit;
 }
 
-.width-reset{
-    width: 18%;
+.width-reset {
+  width: 18%;
 }
 
-.d-flex{
-    display: flex;
+.d-flex {
+  display: flex;
 }
 
-.p-relative{
-    position: relative;
+.p-relative {
+  position: relative;
+}
+
+.f-size1 {
+  font-size: 1rem;
 }
