--- a/styles/cartManagement.css
+++ b/styles/cartManagement.css
@@ -1,15 +1,18 @@
-.cart_container {
+.cart_page_title{
+    text-align: center;
+    margin: 4rem 0 5rem;
 }
 
 .cart_products_container {
   width: 70%;
-  height: 30rem;
-  background-color: pink;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
 }
 
 .cart_payment_receipt {
   width: 30%;
-  height: 15rem;
   background-color: blueviolet;
 }
 
@@ -60,6 +63,6 @@
   margin: 0 0.5rem;
 }
 
-.cart_card_btncontainer{
-    margin-top: 1.8rem;
+.cart_card_btncontainer {
+  margin-top: 1.8rem;
 }
