--- a/styles/utility.css
+++ b/styles/utility.css
@@ -60,3 +60,11 @@
 .f-size1 {
   font-size: 1rem;
 }
+
+.b-bottom1{
+  border-bottom: 1px solid var(--custom-pri-clr);
+}
+
+.cta-btn{
+  background-color: var(--plant-pri-clr);
+}
