--- a/styles/utility.css
+++ b/styles/utility.css
@@ -2,6 +2,10 @@
   width: auto;
 }
 
+.width-100p{
+  width: 100%;
+}
+
 .ml-1 {
   margin-left: 1rem;
 }
@@ -12,6 +16,10 @@
 
 .mb-0 {
   margin-bottom: 0;
+}
+
+.mb-1{
+  margin-bottom: 1rem;
 }
 
 .mb-2 {
